--- a/Styles/main.css
+++ b/Styles/main.css
@@ -84,8 +84,178 @@ select {
   margin: 0;
 }
 
+.App .app-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  display: none;
+}
+
+.App .app-overlay .modal-view {
+  width: 35%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.App .app-overlay .modal-view .modal-close-container {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-bottom: 2em;
+  position: relative;
+}
+
+.App .app-overlay .modal-view .modal-close-container .close-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 1em;
+}
+
+.App .app-overlay .modal-view .modal-close-container .close-icon:hover {
+  -webkit-filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+}
+
+.App .app-overlay .modal-view .modal-image-container {
+  width: 100%;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused {
+  width: 100%;
+  position: relative;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused .focused {
+  width: 100%;
+  border-radius: 0.55em;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused .previous-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: -1em;
+  background-color: #ffffff;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused .previous-icon img:hover {
+  -webkit-filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused .next-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 50%;
+  right: -1em;
+  background-color: #ffffff;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-focused .next-icon img:hover {
+  -webkit-filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          filter: brightness(0) saturate(100%) invert(54%) sepia(47%) saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-array {
+  width: 100%;
+  height: 5em;
+  margin: 1em 0em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  opacity: 1;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-array img {
+  height: 100%;
+  border-radius: 0.55em;
+  margin-right: 0.5em;
+  -webkit-transition: all 200ms ease-out;
+  transition: all 200ms ease-out;
+  border: none;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-array img:last-child {
+  margin-right: 0em;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-array img:hover {
+  -webkit-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  opacity: 0.7;
+}
+
+.App .app-overlay .modal-view .modal-image-container .modal-image-array img.active {
+  -webkit-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  border: 0.1em solid #ff7e1b;
+  opacity: 0.8;
+}
+
+.App .app-overlay.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 /* Nav */
 nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 auto;
@@ -95,12 +265,6 @@ nav {
   height: -moz-fit-content;
   height: fit-content;
   max-height: 20vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 0;
   margin: 0;
   border-bottom: 0.05em solid #d8d1d1;
@@ -136,30 +300,229 @@ nav ul li {
 nav ul li:hover {
   -webkit-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
-  border-bottom: 0.25em solid #ff7d1a;
+  border-bottom: 0.25em solid #ff7e1b;
 }
 
 nav .cart-user {
-  position: absolute;
-  right: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: absolute;
+  right: 0;
 }
 
-nav .cart-user img {
+nav .cart-user .cart-container .cart-icon-container {
+  position: relative;
+  margin-right: 0.5em;
+}
+
+nav .cart-user .cart-container .cart-icon-container .cart-count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: #ff7e1b;
+  border-radius: 0.25em;
+  position: absolute;
+  top: 0em;
+  right: 0.5em;
+}
+
+nav .cart-user .cart-container .cart-icon-container .cart-count p {
+  font-size: 0.5em;
+  line-height: 0.5em;
+  margin: 0;
+  padding: 0.5em 0.75em;
+  color: #ffffff;
+  font-weight: 600;
+}
+
+nav .cart-user .cart-container .cart {
+  width: 16em;
+  height: 12em;
+  background-color: white;
+  display: none;
+  position: absolute;
+  bottom: -12.5em;
+  left: -100%;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 0.5em;
+}
+
+nav .cart-user .cart-container .cart .cart-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Kumbh Sans", sans-serif;
+  font-weight: 700;
+  font-size: 0.75em;
+  padding-left: 0.8em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  height: 4em;
+  border-bottom: 0.01em solid #d5d8db;
+}
+
+nav .cart-user .cart-container .cart .cart-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "Kumbh Sans", sans-serif;
+  min-height: 5em;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 0;
+}
+
+nav .cart-user .cart-container .cart .cart-content p {
+  width: 100%;
+  text-align: center;
+  font-weight: 400;
+  font-size: 0.75em;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 3.5em;
+  margin: 0.5em 0em;
+  padding: 0;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item img {
+  height: 90%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
   margin: 0em 0.5em;
+  border-radius: 0.25em;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item .cart-text {
+  position: relative;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item .cart-text p {
+  font-family: "Kumbh Sans", sans-serif;
+  text-align: left;
+  font-weight: 600;
+  color: #7e7d7d;
+  padding: 0;
+  margin: 0em 0.5em 0em 0em;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item .cart-text p .cost {
+  color: #000000;
+  font-weight: 700;
+}
+
+nav .cart-user .cart-container .cart .cart-content .cart-item .cart-text img {
+  position: absolute;
+  right: 0;
+  bottom: 0.5em;
+  height: 1em;
+}
+
+nav .cart-user .cart-container .cart .checkout-button-container {
+  display: none;
+  width: 100%;
+}
+
+nav .cart-user .cart-container .cart .checkout-button-container .checkout-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  height: 2.7em;
+  background-color: #ff7e1b;
+  color: #ffffff;
+  margin: 0.3em 0em;
+  border-radius: 0.55em;
+}
+
+nav .cart-user .cart-container .cart .checkout-button-container .checkout-button p {
+  font-family: "Kumbh Sans", sans-serif;
+  font-size: 0.75em;
+  font-weight: 600;
+  padding: 0;
+  margin: 0;
+}
+
+nav .cart-user .cart-container .cart.non-empty .checkout-button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav .cart-user .cart-container:hover .cart {
+  display: block;
+}
+
+nav .cart-user .cart-container.active .cart {
+  display: block;
 }
 
 nav .cart-user .avatar {
   height: 2.8em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 0.1em solid #ff7d1a;
   border-radius: 50%;
+}
+
+nav .cart-user .avatar:hover {
+  border: 0.1em solid #ff7e1b;
 }
 
 /* Main */
@@ -202,7 +565,6 @@ nav .cart-user .avatar {
 }
 
 .main .left-container .product-images {
-  padding: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -212,6 +574,7 @@ nav .cart-user .avatar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 1em;
 }
 
 .main .left-container .product-images .image-container {
@@ -243,6 +606,8 @@ nav .cart-user .avatar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-flow: row;
@@ -253,10 +618,8 @@ nav .cart-user .avatar {
 }
 
 .main .left-container .product-images .image-array img {
+  height: 100%;
   border-radius: 0.55em;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
   margin-right: 0.5em;
   -webkit-transition: all 200ms ease-out;
   transition: all 200ms ease-out;
@@ -276,7 +639,7 @@ nav .cart-user .avatar {
 .main .left-container .product-images .image-array img.active {
   -webkit-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
-  border: 0.1em solid #ff7d1a;
+  border: 0.1em solid #ff7e1b;
   opacity: 0.8;
 }
 
@@ -298,7 +661,7 @@ nav .cart-user .avatar {
 }
 
 .main .right-container .product-description .company {
-  color: #ff7d1a;
+  color: #ff7e1b;
   font-weight: 700;
   font-size: 0.85em;
 }
@@ -321,10 +684,6 @@ nav .cart-user .avatar {
 }
 
 .main .right-container .product-description .price .price-focus {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  text-align: left;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -334,6 +693,10 @@ nav .cart-user .avatar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  text-align: left;
   padding: 0;
   margin: 0;
 }
@@ -346,7 +709,7 @@ nav .cart-user .avatar {
 .main .right-container .product-description .price .price-focus .sale {
   padding: 0.2em 0.5em;
   background-color: #fde6db;
-  color: #ff7d1a;
+  color: #ff7e1b;
   font-size: 0.75em;
   border-radius: 0.25em;
 }
@@ -386,7 +749,7 @@ nav .cart-user .avatar {
 
 .main .right-container .product-description .button-group .quantity-button .subtract,
 .main .right-container .product-description .button-group .quantity-button .add {
-  color: #ff7d1a;
+  color: #ff7e1b;
   width: 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -394,6 +757,11 @@ nav .cart-user .avatar {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.main .right-container .product-description .button-group .quantity-button .subtract:hover,
+.main .right-container .product-description .button-group .quantity-button .add:hover {
+  opacity: 0.7;
 }
 
 .main .right-container .product-description .button-group .quantity-button .quantity {
@@ -411,7 +779,7 @@ nav .cart-user .avatar {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  background-color: #ff7d1a;
+  background-color: #ff7e1b;
   color: #ffffff;
   height: 3em;
   width: -webkit-fit-content;
@@ -420,6 +788,11 @@ nav .cart-user .avatar {
   padding: 0em 4.5em;
   border-radius: 00.5em;
   font-size: 0.75em;
+  opacity: 1;
+}
+
+.main .right-container .product-description .button-group .add-to-cart-button:hover {
+  opacity: 0.7;
 }
 
 .main .right-container .product-description .button-group .add-to-cart-button p {
