--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -1,4 +1,4 @@
-$orange: rgb(255, 125, 26);
+$orange: #ff7e1b;
 $pale_Orange: rgb(253, 230, 219);
 $grey: rgb(126, 125, 125);
 $bluish-grey: rgb(239, 243, 245);
@@ -13,6 +13,11 @@ $font_size_large: 2.1em;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@mixin flexAlign {
+  display: flex;
+  align-items: center;
 }
 
 body {
@@ -74,9 +79,7 @@ select {
 .App {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flexCenter();
   .container {
     width: 75%;
     height: 100%;
@@ -86,17 +89,124 @@ select {
     padding: 0;
     margin: 0;
   }
+  .app-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.7);
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    display: none;
+    .modal-view {
+      width: 35%;
+      height: fit-content;
+      display: flex;
+      flex-flow: column;
+      .modal-close-container {
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 2em;
+        position: relative;
+        .close-icon {
+          position: absolute;
+          top: 0;
+          right: 0;
+          height: 1em;
+          &:hover {
+            filter: brightness(0) saturate(100%) invert(54%) sepia(47%)
+              saturate(2112%) hue-rotate(347deg) brightness(102%) contrast(101%);
+          }
+        }
+      }
+      .modal-image-container {
+        width: 100%;
+        .modal-image-focused {
+          width: 100%;
+          position: relative;
+          .focused {
+            width: 100%;
+            border-radius: 0.55em;
+          }
+          .previous-icon {
+            @include flexCenter();
+            position: absolute;
+            top: 50%;
+            left: -1em;
+            background-color: #ffffff;
+            width: 2em;
+            height: 2em;
+            border-radius: 50%;
+            img {
+              &:hover {
+                filter: brightness(0) saturate(100%) invert(54%) sepia(47%)
+                  saturate(2112%) hue-rotate(347deg) brightness(102%)
+                  contrast(101%);
+              }
+            }
+          }
+          .next-icon {
+            @include flexCenter();
+            position: absolute;
+            top: 50%;
+            right: -1em;
+            background-color: #ffffff;
+            width: 2em;
+            height: 2em;
+            border-radius: 50%;
+            img {
+              &:hover {
+                filter: brightness(0) saturate(100%) invert(54%) sepia(47%)
+                  saturate(2112%) hue-rotate(347deg) brightness(102%)
+                  contrast(101%);
+              }
+            }
+          }
+        }
+        .modal-image-array {
+          width: 100%;
+          height: 5em;
+          margin: 1em 0em;
+          display: flex;
+          justify-content: center;
+          flex-flow: row;
+          flex-wrap: nowrap;
+          opacity: 1;
+          img {
+            height: 100%;
+            border-radius: 0.55em;
+            margin-right: 0.5em;
+            transition: all 200ms ease-out;
+            border: none;
+          }
+          img:last-child {
+            margin-right: 0em;
+          }
+          img:hover {
+            transition: all 200ms ease-in;
+            opacity: 0.7;
+          }
+          img.active {
+            transition: all 200ms ease-in;
+            border: 0.1em solid $orange;
+            opacity: 0.8;
+          }
+        }
+      }
+    }
+  }
+  .app-overlay.active {
+    @include flexCenter();
+  }
 }
 
 /* Nav */
 nav {
+  @include flexAlign();
   position: relative;
   flex: 0 1 auto;
   width: 100%;
   height: fit-content;
   max-height: 20vh;
-  display: flex;
-  align-items: center;
   padding: 0;
   margin: 0;
   border-bottom: 0.05em solid #d8d1d1;
@@ -125,18 +235,142 @@ nav {
     }
   }
   .cart-user {
+    @include flexAlign();
     position: absolute;
     right: 0;
-    display: flex;
-    align-items: center;
-    img {
-      margin: 0em 0.5em;
+    .cart-container {
+      .cart-icon-container {
+        position: relative;
+        margin-right: 0.5em;
+        .cart-count {
+          @include flexCenter();
+          width: fit-content;
+          height: fit-content;
+          background-color: $orange;
+          border-radius: 0.25em;
+          position: absolute;
+          top: 0em;
+          right: 0.5em;
+          p {
+            font-size: 0.5em;
+            line-height: 0.5em;
+            margin: 0;
+            padding: 0.5em 0.75em;
+            color: #ffffff;
+            font-weight: 600;
+          }
+        }
+      }
+      .cart {
+        width: 16em;
+        height: 12em;
+        background-color: rgb(255, 255, 255);
+        display: none;
+        position: absolute;
+        bottom: -12.5em;
+        left: -100%;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        border-radius: 0.5em;
+        .cart-header {
+          @include flexAlign();
+          font-family: $kumbh;
+          font-weight: 700;
+          font-size: $font_size_small;
+          padding-left: 0.8em;
+          box-sizing: border-box;
+          width: 100%;
+          height: 4em;
+          border-bottom: 0.01em solid #d5d8db;
+        }
+        .cart-content {
+          @include flexAlign();
+          font-family: $kumbh;
+          min-height: 5em;
+          height: fit-content;
+          padding: 0;
+          p {
+            width: 100%;
+            text-align: center;
+            font-weight: 400;
+            font-size: $font_size_small;
+          }
+          .cart-item {
+            @include flexAlign();
+            width: 100%;
+            height: 3.5em;
+            margin: 0.5em 0em;
+            padding: 0;
+            flex-flow: row;
+            flex-wrap: nowrap;
+            img {
+              height: 90%;
+              flex: 0 1 auto;
+              margin: 0em 0.5em;
+              border-radius: 0.25em;
+            }
+            .cart-text {
+              position: relative;
+              min-width: fit-content;
+              flex: 1 1 auto;
+              p {
+                font-family: $kumbh;
+                text-align: left;
+                font-weight: 600;
+                color: $grey;
+                padding: 0;
+                margin: 0em 0.5em 0em 0em;
+                .cost {
+                  color: #000000;
+                  font-weight: 700;
+                }
+              }
+              img {
+                position: absolute;
+                right: 0;
+                bottom: 0.5em;
+                height: 1em;
+              }
+            }
+          }
+        }
+        .checkout-button-container {
+          display: none;
+          width: 100%;
+          .checkout-button {
+            @include flexCenter();
+            width: 90%;
+            height: 2.7em;
+            background-color: $orange;
+            color: #ffffff;
+            margin: 0.3em 0em;
+            border-radius: 0.55em;
+            p {
+              font-family: $kumbh;
+              font-size: $font_size_small;
+              font-weight: 600;
+              padding: 0;
+              margin: 0;
+            }
+          }
+        }
+      }
+      .cart.non-empty .checkout-button-container {
+        @include flexCenter();
+      }
+      &:hover .cart {
+        display: block;
+      }
+    }
+    .cart-container.active .cart {
+      display: block;
     }
     .avatar {
       height: 2.8em;
       box-sizing: border-box;
-      border: 0.1em solid $orange;
       border-radius: 50%;
+      &:hover {
+        border: 0.1em solid $orange;
+      }
     }
   }
 }
@@ -166,17 +400,13 @@ nav {
   .left-container {
     @include flexCenter();
     .product-images {
+      @include flexCenter();
       padding: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       .image-container {
         width: 90%;
       }
       .image-focused {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flexCenter();
         width: 100%;
         img {
           width: 100%;
@@ -188,12 +418,13 @@ nav {
         height: 5em;
         margin: 1em 0em;
         display: flex;
+        justify-content: space-around;
         flex-flow: row;
         flex-wrap: nowrap;
         opacity: 1;
         img {
+          height: 100%;
           border-radius: 0.55em;
-          flex: 1 1 auto;
           margin-right: 0.5em;
           transition: all 200ms ease-out;
           border: none;
@@ -237,11 +468,9 @@ nav {
         font-weight: 700;
         line-height: 0.75em;
         .price-focus {
+          @include flexCenter();
           width: fit-content;
           text-align: left;
-          display: flex;
-          align-items: center;
-          justify-content: center;
           padding: 0;
           margin: 0;
           .current {
@@ -281,6 +510,9 @@ nav {
             width: 2.5em;
             display: flex;
             justify-content: center;
+            &:hover {
+              opacity: 0.7;
+            }
           }
           .quantity {
             font-weight: 700;
@@ -298,6 +530,10 @@ nav {
           padding: 0em 4.5em;
           border-radius: 00.5em;
           font-size: $font_size_small;
+          opacity: 1;
+          &:hover {
+            opacity: 0.7;
+          }
         }
         .add-to-cart-button p {
           font-weight: 600;
